styles.css
body{
  font-family: 'Lato', sans-serif;
  margin: auto;
  max-width: 900px;
  color: #00487C;
  line-height: 1.5;
  /* color: #3E6680 */
  /* background-color: #F6F9FC */
}

.icon{
  width: 25px;
}

h1 {
  color: #0496FF;
  font-family: 'Lobster Two', cursive;
  font-size: 1.5cm;
  margin: 0px;
}

.container-background {
  display: flex;
  justify-content: space-between;
  background-color: rgb(209, 239, 253);
  border-radius: 3px;
  margin: 0px;
}

.summary, .skill, .prj, .edu, .employment, h4, h3, h5 {
  padding: 5px;
  margin: 1px 2px 2px;
}

.prj-content, .education{
  border-style:none;
}

h5{
  font-size: 0.92em;
}

.prj{
  position: relative;
  display: inline-block;
}

.overlay{
  display:none;
}
.prj:hover .overlay{
  width:100%;
  height:100%;
  position:absolute;
  opacity: 100%;
  top:0;
  left:0;
  display:inline-block;
  -webkit-box-sizing:border-box;
  -moz-box-sizing:border-box;
  box-sizing:border-box;
  z-index: 1;
}

.skill, .prj {
  width: 50%;
  float:left;
  
}

.projects {
  display: flex;
  border-style: none;
  margin: 1px 2px;
}


div {
  border-style: double;
  border-width: 2px;
  border-radius: 3px;
  border-color: rgb(209, 239, 253);
  margin: 0px 2px 2px 0px;
  padding: 2px;
}

h2{
  font-family: 'Lobster Two', cursive;
  color: #027BCE;
  margin: 1px 2px 2px;
  font-size: 1.85em;
}

h3{
  color: #4BB3FD;
  margin: 0em;
}

.container{
  border-style: none;
  display: flex;
  justify-content: space-between;
  /* padding: 0px 10px; */
}



/* light to dark
F6F6F8
9DD0DA
71A5D6
67ADD9
1C7ABF 


#5680E9 bright blue
#84CEEB lightest blue
#5AB9E1 med blue
#C1C8E4 lavender
#8860D0 purple

*/

